--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -212,12 +212,13 @@
     "plt.ylabel('Rainfall (Inches)')\n",
     "plt.xticks(rotation='45')\n",
     "plt.savefig(\"Images/Precipitation.png\")\n",
+    "plt.tight_layout\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +294,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +342,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 360,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +407,7 @@
     "plt.ylabel('Frequency')\n",
     "plt.xlabel('Temperature (F)')\n",
     "plt.savefig(\"Images/Temperature.png\")\n",
+    "plt.tight_layout\n",
     "plt.show()"
    ]
   },
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +463,7 @@
        "[(66.0, 75.325, 80.0)]"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -507,13 +509,14 @@
     "trip_df.plot.bar(y='tavg', yerr=(trip_df['tmax'] - trip_df['tmin']), title='Trip Avg Temp', color='coral', alpha=0.5, figsize=(4,6), legend=None)\n",
     "plt.ylabel(\"Temperature (F)\")\n",
     "plt.xticks(np.arange(1,1))\n",
+    "plt.tight_layout\n",
     "plt.savefig(\"Images/tripTemps.png\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +547,7 @@
        "[(62.0, 69.15384615384616, 77.0)]"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 369,
    "metadata": {
     "scrolled": false
    },
@@ -589,7 +592,7 @@
        " ('2017-05-10')]"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +628,7 @@
        " [(64.0, 73.3157894736842, 78.0)]]"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +742,7 @@
        "2017-05-10  64.0  73.315789  78.0"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -777,6 +780,7 @@
     "plt.xlabel(\"Date\")\n",
     "plt.margins(x=0)\n",
     "plt.ylim(0,90)\n",
+    "plt.tight_layout\n",
     "plt.savefig(\"Images/DailyNormals.png\")\n",
     "plt.show()"
    ]
